# multi-track-voice-chat

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  voice-chat-plan.md
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
deploy/: docker-compose.yml  egress.yaml.example  livekit.yaml.example  server.Dockerfile
docs/: manual-acceptance.md
migrations/: 001_initial.sql  002_participant_presence.sql  003_identity_lifecycle.sql  004_room_sessions.sql
web/: package-lock.json  package.json  vite.config.ts
web/src/: host-claim.css  main.tsx  style.css
