[workspace]
members = ["crates/domain", "crates/recorder", "crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hmac = "0.12"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
hound = "3.5"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
