[package]
name = "voice-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
voice-domain = { path = "../domain" }
voice-recorder = { path = "../recorder" }
